--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://github.com/criaturaimaginaria/argentina-economy",
+  "homepage":"https://criaturaimaginaria.github.io/argentina-economy/",
   "name": "argentina-economy",
   "version": "0.1.0",
   "private": true,
