--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://criaturaimaginaria.github.io/argentina-economy",
+  "homepage": "https://criaturaimaginaria.github.io/argentina-economy",
   "name": "argentina-economy",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
